# kubig2025

./: .gitignore  CMakeLists.txt  README.md  a.out  environment.yml  platformio.ini
2nd_Project/: 1zmq.cpp  _zmq.cpp  _zmq.py  gui.py  m_server.cpp  main_server.py  parkingslots.cpp  sev  sql.py  tablecreate.sql  test.py
ATmega128/: ch10 _timerLed.c  ch10_adc.c  ch10_eeprom.c  ch10_fndcaptur2.c  ch10_fndtimer.c  ch10_lcd.c  ch10_piezo.c  ch10_timer.c  ch10_timer2.c  ch11_DCmotor.c  ch11_I2c.c  ch1_1_led.c  ch1_2_led.c  ch3_10_fnd2.c  ch3_11.c  ch3_12.c  ch3_13.c  ch3_1_led.c  ch3_7_chattering_error.c  ch3_7_chattering_solve.c  ch3_8_multi_button.c  ch3_9_fnd.c  ch7_buzzer.c  ch9_cds.c  ch9_uart2.c  ch9_uart3.c  ch9_uart3_1.c  platformio.ini
bowling/: CMakeLists.txt
bowlingScore/: CMakeLists.txt  createBTable.sql
bowlingScore/include/: bbowling.h  bowling.h
bowlingScore/src/: bbowling.c  bowling.c  main.c
c_example/: a.out  arithmethics  celsius2fahr  celsius2fahr.c  charNumber  charNumber.c  compare  compare.c  fahr2celsius  fahr2celsius.c  fourbit  fourbit.c  fournit  genderRatio  genderRatio.c  increment  increment.c  infinit.c  limit  limit.c  literal  literal.c  makefile  oddeven  practice  practice.c  sizeof  triangle  triangle2
c_example/part3/: CMakeLists.txt  arrayAssignment  arrayAssignment.c  arrayCompare  arrayCompare.c  arrayPointer.c  bubble  bubble.c  charAddress  charPointerOperation  charPointerOperation.c  dynamicAllocation  dynamicAllocation.c  endian  endian.c  enumExample  enumExample.c  fflushex.c  filePointer  filePointer.c  filedescriptor  filedescriptor.c  functionPointer  functionPointer.c  getSeries.c  hellostr  hellostr.c  makefile  p  p.c  pointer2  pointer2.c  pointerconp  pointerconp.c  pp.c  qsort  qsort.c  selection  selection.c  strcat  (+13 more)
c_example/part3/CarSerial/: main.c  serial  serial.c  serial.h
c_example/part3/carSerial/: CMakeLists.txt  makefile
c_example/part3/date/: CMakeLists.txt  date  date.c  date.h  main.c  makefile
c_example/part3/myRandom/: CMakeLists.txt  main.c  makefile  myRandom.c  myrandom.h
c_example/part3/str/: CMakeLists.txt  main.c  mystring.h
c_example/part3/string/: makefile  mystring  mystring.c  string
cpp/: CMakeLists.txt  hello  hello.cpp
data/: info.txt  text.txt
doc_test/: Dockerfile  compose.yml  requirments.txt
ds/: array  generic  generic.c  strcpy.c  testArayy  testArray  testarray.c  testarray2.c  teststrcpy  variantsizearray.c  variantsizearray2.c
final_project/: helmet.cpp  helmet.py  helmet_tracking_module.py  main.py  test  transform_json.ipynb
firstProjectSql/: pjsql.c  pjsql.h  serial.c  serial.h  test.c  test1.c
ml_dl_python/: a01_jupyter.ipynb  a02-1_numpy.ipynb  a02_fish.ipynb  a03_numpy.ipynb  a04_numpt2.ipynb  a05-1_fish_split.ipynb  a06_perch copy.ipynb  a07_perch.ipynb  a08_perch_pandas.ipynb  a09_classification.ipynb  a10_batch_slope.ipynb  a11_tree.ipynb  a12_cross_validation.ipynb  a13_randomForest.ipynb  a15_pandas.ipynb  a16_kmean.ipynb  a17_pca.ipynb  a18_transformer.ipynb  a19_neural.ipynb  a20_kerasdeep.ipynb  a21_keras2.ipynb  a22_convolustion.ipynb  a23_rnn.ipynb  a24_lstm_gru.ipynb  a25_gru.ipynb  a26_gym_cartpole_v1.ipynb  a27_vae.ipynb  a28_gan.ipynb  best-model.keras  model-whole.keras  model.weights.h5  sin_sample.npz
network/: CMakeLists.txt  endian.c  hello_client.c  hello_server.c  mq_client.c  mqtest  pipe.c  shm_semaphore.c  shm_semaphore2.c  shm_server.c  shm_test.c  shm_test2.c
opencv/part7/: 59_cnn_training.ipynb  59_mnist_cnn.cpp  60_google_vision.cpp  61_google_cam.cpp  62_dnnface.cpp  CMakeLists.txt  model_server.py
ornage3/: basket.ows  bts.ows  healthcare.ows  heart.ows  house.ows  house_price.ows  mlp_test.py  stop_words.txt  stroke.ows  test.ipynb  untitled.ows  xgboost.ipynb
platformio/: platformio.ini
python/: a01.py  a03_variable.py  a05_type.py  a06_frame.py  a07_localvariable.py  a08_index.py  a10_input.py  a12_str_Class.py  a14_overloading.py  a17_list.py  a18_list_method.py  a21_cPython_import.py  a22_dictionary.py  a23_dic_for.py  a24_while.py  a26_list_compre.py  a27_minmaxsum.py  a28_function.py  a29_default.py  a30_lambda.py  a31_return.py  a33_memorization.py  a34_lru_cache.py  a38_file2.py  a40_random.py  a41_generator.py  a43_generator3.py  a44_iteration.py  a47_module.py  a49_random2.py  a53_package.py  data.txt  dlmain.c  example1.py  example2.py  example3.py  plugin.c  pythoninterpreter.c  pythoninterpreter2.c  setup.py  (+1 more)
python/poetry_test/: pyproject.toml  test_poetry.py
python/poetry_test/src/poetry_test/: __init__.py
raspberryPi/: a.out  device_gpio.c  driver_exam_native  driver_exam_native.c  fnd_cnt  fnd_cnt.c  gyro_buzzer_led  gyro_buzzer_led.c  gyro_ctrl  gyro_ctrl.c  hard_buzzer  helloRaspberry  helloRaspberry.c  i2c_rgb_led  i2c_rgb_led.c  i2c_servo  i2c_servo.c  i2c_switch_led  i2c_switch_led.c  interrupt  interrupt.c  led_driver_native  led_driver_native.c  led_pwm.c  led_switch_driver2_native.c  led_switch_driver_native  led_switch_driver_native.c  sound  (+15 more)
sqlQuery/: CMakeLists.txt  bookSql  bookSql.c  createDbTable.sql  insertData.sql
sqlQuery/src/: bookSql.c  main.c
stl/: CMakeLists.txt  ex10_forclass.cpp  ex11_nullptr.cpp  ex12_constexp.cpp  ex13_array.cpp  ex14_priority.cpp  ex15_unordered_map.cpp  ex16_transform.cpp  ex17_sort_fstream.cpp  ex17_sort_fstream2.cpp  ex18  ex18_execution.cpp  ex1_vector.cpp  ex2_string_vector.cpp  ex3_longest.cpp  ex4_string.cpp  ex5_string_find.cpp  ex6_iterator.cpp  ex7_map.cpp  ex8_vector_list1.cpp  ex8_vector_list2.cpp  ex9_lambda.cpp  student  student.txt  student_example.cpp
stl/data_process/: data_process.cpp  data_process.hpp  main.cpp  testprcessor
stl/range_exam/: main.cpp  processor.cpp
stl/smartpoint/: ex10_moveVector.cpp  ex11_moveclass.cpp  ex12_variantOptional.cpp  ex13  ex13_thread.cpp  ex14  ex14_asyncFuture.cpp  ex15  ex15_multithread.cpp  ex16  ex16.cpp  ex16_finalModernExample.cpp  ex1_unique_ptr.cpp  ex3_deleter.cpp  ex4_shared_ptr.cpp  ex5_memoryleak.cpp  ex6_weakedPtr.cpp  ex7_vectorsmart.cpp  ex8_treesmart.cpp  ex9_forward.cpp
(+502 files in other folders)
