cmake_minimum_required(VERSION 3.10)
project(kugig2025)

add_subdirectory(sqlQuery/CMakeLits.txt)
add_subdirectory(c_example/part1/CMakeLists.txt)
add_subdirectory(c_example/part2/CMakeLists.txt)
add_subdirectory(c_example/part3/CMakeLists.txt)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_subdirectory(sqlQuery)
add_subdirectory(bowlingScore)
add_subdirectory(bowling)
add_subdirectory(c_example/part1)
add_subdirectory(c_example/part2)
add_subdirectory(c_example/part3)
add_subdirectory(stl)
add_subdirectory(network/ipc)
add_subdirectory(network/tcp)
add_subdirectory(network/util)
add_subdirectory(cpp)
