cmake_minimum_required(VERSION 3.10)
project(MainProject)

# add_subdirectory(c_example/sqlQuery)
# add_subdirectory(c_example/bowling)
# add_subdirectory(c_example/part1)
# add_subdirectory(c_example/part2)
# add_subdirectory(c_example/part3)
# add_subdirectory(ds)
# add_subdirectory(cpp)
# add_subdirectory(stl)
# add_subdirectory(smartpoint)
# add_subdirectory(test_ip)
# add_subdirectory(network/ipc)
# add_subdirectory(network/tcp_udp)
# add_subdirectory(network/util)
# add_subdirectory(network/multiProcess)
add_subdirectory(opencv/part1)
add_subdirectory(opencv/part2)
add_subdirectory(opencv/part3)
add_subdirectory(opencv/part4)
add_subdirectory(opencv/part5)
add_subdirectory(opencv/part6)
add_subdirectory(opencv/part7)
