[project]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = [
    {name = "wooseok-L2",email = "dntjr@knou.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests (==2.28.1)", "numpy (==1.23.5)"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry]
packages = [{include = "poetry_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
